típushibák ellenőrzése, hibajavítások

--- a/Editor/src/hu/racz/zalan/editor/core/scope/res/xml/types.xml
+++ b/Editor/src/hu/racz/zalan/editor/core/scope/res/xml/types.xml
@@ -1,129 +1,497 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <types>
     <transparent>
-        <type>bool</type>
-        <type>int</type>
-        <type>uint</type>
-        <type>float</type>
-        <type>double</type>
-        <type>vec2</type>
-        <type>vec3</type>
-        <type>vec4</type>
-        <type>dvec2</type>
-        <type>dvec3</type>
-        <type>dvec4</type>
-        <type>bvec2</type>
-        <type>bvec3</type>
-        <type>bvec4</type>
-        <type>ivec2</type>
-        <type>ivec3</type>
-        <type>ivec4</type>
-        <type>uvec2</type>
-        <type>uvec3</type>
-        <type>uvec4</type>
-        <type>mat2</type>
-        <type>mat3</type>
-        <type>mat4</type>
-        <type>mat2x2</type>
-        <type>mat2x3</type>
-        <type>mat2x4</type>
-        <type>mat3x2</type>
-        <type>mat3x3</type>
-        <type>mat3x4</type>
-        <type>mat4x2</type>
-        <type>mat4x3</type>
-        <type>mat4x4</type>
-        <type>dmat2</type>
-        <type>dmat3</type>
-        <type>dmat4</type>
-        <type>dmat2x2</type>
-        <type>dmat2x3</type>
-        <type>dmat2x4</type>
-        <type>dmat3x2</type>
-        <type>dmat3x3</type>
-        <type>dmat3x4</type>
-        <type>dmat4x2</type>
-        <type>dmat4x3</type>
-        <type>dmat4x4</type>
+        <type>
+            <name>bool</name>
+            <width>1</width>
+            <height>1</height>
+            <base>bool</base>
+        </type>
+        <type>
+            <name>int</name>
+            <width>1</width>
+            <height>1</height>
+            <base>int</base>
+        </type>
+        <type>
+            <name>uint</name>
+            <width>1</width>
+            <height>1</height>
+            <base>uint</base>
+        </type>
+        <type>
+            <name>float</name>
+            <width>1</width>
+            <height>1</height>
+            <base>float</base>
+        </type>
+        <type>
+            <name>double</name>
+            <width>1</width>
+            <height>1</height>
+            <base>double</base>
+        </type>
+        <type>
+            <name>vec2</name>
+            <width>2</width>
+            <height>1</height>
+            <base>float</base>
+        </type>
+        <type>
+            <name>vec3</name>
+            <width>3</width>
+            <height>1</height>
+            <base>float</base>
+        </type>
+        <type>
+            <name>vec4</name>
+            <width>4</width>
+            <height>1</height>
+            <base>float</base>
+        </type>
+        <type>
+            <name>dvec2</name>
+            <width>2</width>
+            <height>1</height>
+            <base>double</base>
+        </type>
+        <type>
+            <name>dvec3</name>
+            <width>3</width>
+            <height>1</height>
+            <base>double</base>
+        </type>
+        <type>
+            <name>dvec4</name>
+            <width>4</width>
+            <height>1</height>
+            <base>double</base>
+        </type>
+        <type>
+            <name>bvec2</name>
+            <width>2</width>
+            <height>1</height>
+            <base>bool</base>
+        </type>
+        <type>
+            <name>bvec3</name>
+            <width>3</width>
+            <height>1</height>
+            <base>bool</base>
+        </type>
+        <type>
+            <name>bvec4</name>
+            <width>4</width>
+            <height>1</height>
+            <base>bool</base>
+        </type>
+        <type>
+            <name>ivec2</name>
+            <width>2</width>
+            <height>1</height>
+            <base>int</base>
+        </type>
+        <type>
+            <name>ivec3</name>
+            <width>3</width>
+            <height>1</height>
+            <base>int</base>
+        </type>
+        <type>
+            <name>ivec4</name>
+            <width>4</width>
+            <height>1</height>
+            <base>int</base>
+        </type>
+        <type>
+            <name>uvec2</name>
+            <width>2</width>
+            <height>1</height>
+            <base>uint</base>
+        </type>
+        <type>
+            <name>uvec3</name>
+            <width>3</width>
+            <height>1</height>
+            <base>uint</base>
+        </type>
+        <type>
+            <name>uvec4</name>
+            <width>4</width>
+            <height>1</height>
+            <base>uint</base>
+        </type>
+        <type>
+            <name>mat2</name>
+            <width>2</width>
+            <height>2</height>
+            <base>float</base>
+        </type>
+        <type>
+            <name>mat3</name>
+            <width>3</width>
+            <height>3</height>
+            <base>float</base>
+        </type>
+        <type>
+            <name>mat4</name>
+            <width>4</width>
+            <height>4</height>
+            <base>float</base>
+        </type>
+        <type>
+            <name>mat2x2</name>
+            <width>2</width>
+            <height>2</height>
+            <base>float</base>
+        </type>
+        <type>
+            <name>mat2x3</name>
+            <width>2</width>
+            <height>3</height>
+            <base>float</base>
+        </type>
+        <type>
+            <name>mat2x4</name>
+            <width>2</width>
+            <height>4</height>
+            <base>float</base>
+        </type>
+        <type>
+            <name>mat3x2</name>
+            <width>3</width>
+            <height>2</height>
+            <base>float</base>
+        </type>
+        <type>
+            <name>mat3x3</name>
+            <width>3</width>
+            <height>3</height>
+            <base>float</base>
+        </type>
+        <type>
+            <name>mat3x4</name>
+            <width>3</width>
+            <height>4</height>
+            <base>float</base>
+        </type>
+        <type>
+            <name>mat4x2</name>
+            <width>4</width>
+            <height>2</height>
+            <base>float</base>
+        </type>
+        <type>
+            <name>mat4x3</name>
+            <width>4</width>
+            <height>3</height>
+            <base>float</base>
+        </type>
+        <type>
+            <name>mat4x4</name>
+            <width>4</width>
+            <height>4</height>
+            <base>float</base>
+        </type>
+        <type>
+            <name>dmat2</name>
+            <width>2</width>
+            <height>2</height>
+            <base>double</base>
+        </type>
+        <type>
+            <name>dmat3</name>
+            <width>3</width>
+            <height>3</height>
+            <base>double</base>
+        </type>
+        <type>
+            <name>dmat4</name>
+            <width>4</width>
+            <height>4</height>
+            <base>double</base>
+        </type>
+        <type>
+            <name>dmat2x2</name>
+            <width>1</width>
+            <height>1</height>
+            <base>double</base>
+        </type>
+        <type>
+            <name>dmat2x3</name>
+            <width>1</width>
+            <height>1</height>
+            <base>double</base>
+        </type>
+        <type>
+            <name>dmat2x4</name>
+            <width>1</width>
+            <height>1</height>
+            <base>double</base>
+        </type>
+        <type>
+            <name>dmat3x2</name>
+            <width>1</width>
+            <height>1</height>
+            <base>double</base>
+        </type>
+        <type>
+            <name>dmat3x3</name>
+            <width>1</width>
+            <height>1</height>
+            <base>double</base>
+        </type>
+        <type>
+            <name>dmat3x4</name>
+            <width>1</width>
+            <height>1</height>
+            <base>double</base>
+        </type>
+        <type>
+            <name>dmat4x2</name>
+            <width>1</width>
+            <height>1</height>
+            <base>double</base>
+        </type>
+        <type>
+            <name>dmat4x3</name>
+            <width>1</width>
+            <height>1</height>
+            <base>double</base>
+        </type>
+        <type>
+            <name>dmat4x4</name>
+            <width>1</width>
+            <height>1</height>
+            <base>double</base>
+        </type>
     </transparent>
     <floating-point-opaque>
-        <type>sampler1D</type>
-        <type>image1D</type>
-        <type>sampler2D</type>
-        <type>image2D</type>
-        <type>sampler3D</type>
-        <type>image3D</type>
-        <type>samplerCube</type>
-        <type>imageCube</type>
-        <type>sampler2DRect</type>
-        <type>image2DRect</type>
-        <type>sampler1DArray</type>
-        <type>image1DArray</type>
-        <type>sampler2DArray</type>
-        <type>image2DArray</type>
-        <type>samplerBuffer</type>
-        <type>imageBuffer</type>
-        <type>sampler2DMS</type>
-        <type>image2DMS</type>
-        <type>sampler2DMSArray</type>
-        <type>image2DMSArray</type>
-        <type>samplerCubeArray</type>
-        <type>imageCubeArray</type>
-        <type>sampler1DShadow</type>
-        <type>sampler2DShadow</type>
-        <type>sampler2DRectShadow</type>
-        <type>sampler1DArrayShadow</type>
-        <type>sampler2DArrayShadow</type>
-        <type>samplerCubeShadow</type>
-        <type>samplerCubeArrayShadow</type>
+        <type>
+            <name>sampler1D</name>
+        </type>
+        <type>
+            <name>image1D</name>
+        </type>
+        <type>
+            <name>sampler2D</name>
+        </type>
+        <type>
+            <name>image2D</name>
+        </type>
+        <type>
+            <name>sampler3D</name>
+        </type>
+        <type>
+            <name>image3D</name>
+        </type>
+        <type>
+            <name>samplerCube</name>
+        </type>
+        <type>
+            <name>imageCube</name>
+        </type>
+        <type>
+            <name>sampler2DRect</name>
+        </type>
+        <type>
+            <name>image2DRect</name>
+        </type>
+        <type>
+            <name>sampler1DArray</name>
+        </type>
+        <type>
+            <name>image1DArray</name>
+        </type>
+        <type>
+            <name>sampler2DArray</name>
+        </type>
+        <type>
+            <name>image2DArray</name>
+        </type>
+        <type>
+            <name>samplerBuffer</name>
+        </type>
+        <type>
+            <name>imageBuffer</name>
+        </type>
+        <type>
+            <name>sampler2DMS</name>
+        </type>
+        <type>
+            <name>image2DMS</name>
+        </type>
+        <type>
+            <name>sampler2DMSArray</name>
+        </type>
+        <type>
+            <name>image2DMSArray</name>
+        </type>
+        <type>
+            <name>samplerCubeArray</name>
+        </type>
+        <type>
+            <name>imageCubeArray</name>
+        </type>
+        <type>
+            <name>sampler1DShadow</name>
+        </type>
+        <type>
+            <name>sampler2DShadow</name>
+        </type>
+        <type>
+            <name>sampler2DRectShadow</name>
+        </type>
+        <type>
+            <name>sampler1DArrayShadow</name>
+        </type>
+        <type>
+            <name>sampler2DArrayShadow</name>
+        </type>
+        <type>
+            <name>samplerCubeShadow</name>
+        </type>
+        <type>
+            <name>samplerCubeArrayShadow</name>
+        </type>
     </floating-point-opaque>
     <signed-integer-opaque>
-        <type>isampler1D</type>
-        <type>iimage1D</type>
-        <type>isampler2D</type>
-        <type>iimage2D</type>
-        <type>isampler3D</type>
-        <type>iimage3D</type>
-        <type>isamplerCube</type>
-        <type>iimageCube</type>
-        <type>isampler2DRect</type>
-        <type>iimage2DRect</type>
-        <type>isampler1DArray</type>
-        <type>iimage1DArray</type>
-        <type>isampler2DArray</type>
-        <type>iimage2DArray</type>
-        <type>isamplerBuffer</type>
-        <type>iimageBuffer</type>
-        <type>isampler2DMS</type>
-        <type>iimage2DMS</type>
-        <type>isampler2DMSArray</type>
-        <type>iimage2DMSArray</type>
-        <type>isamplerCubeArray</type>
-        <type>iimageCubeArray</type>
+        <type>
+            <name>isampler1D</name>
+        </type>
+        <type>
+            <name>iimage1D</name>
+        </type>
+        <type>
+            <name>isampler2D</name>
+        </type>
+        <type>
+            <name>iimage2D</name>
+        </type>
+        <type>
+            <name>isampler3D</name>
+        </type>
+        <type>
+            <name>iimage3D</name>
+        </type>
+        <type>
+            <name>isamplerCube</name>
+        </type>
+        <type>
+            <name>iimageCube</name>
+        </type>
+        <type>
+            <name>isampler2DRect</name>
+        </type>
+        <type>
+            <name>iimage2DRect</name>
+        </type>
+        <type>
+            <name>isampler1DArray</name>
+        </type>
+        <type>
+            <name>iimage1DArray</name>
+        </type>
+        <type>
+            <name>isampler2DArray</name>
+        </type>
+        <type>
+            <name>iimage2DArray</name>
+        </type>
+        <type>
+            <name>isamplerBuffer</name>
+        </type>
+        <type>
+            <name>iimageBuffer</name>
+        </type>
+        <type>
+            <name>isampler2DMS</name>
+        </type>
+        <type>
+            <name>iimage2DMS</name>
+        </type>
+        <type>
+            <name>isampler2DMSArray</name>
+        </type>
+        <type>
+            <name>iimage2DMSArray</name>
+        </type>
+        <type>
+            <name>isamplerCubeArray</name>
+        </type>
+        <type>
+            <name>iimageCubeArray</name>
+        </type>
     </signed-integer-opaque>
     <unsigned-integer-opaque>
-        <type>usampler1D</type>
-        <type>uimage1D</type>
-        <type>usampler2D</type>
-        <type>uimage2D</type>
-        <type>usampler3D</type>
-        <type>uimage3D</type>
-        <type>usamplerCube</type>
-        <type>uimageCube</type>
-        <type>usampler2DRect</type>
-        <type>uimage2DRect</type>
-        <type>usampler1DArray</type>
-        <type>uimage1DArray</type>
-        <type>usampler2DArray</type>
-        <type>uimage2DArray</type>
-        <type>usamplerBuffer</type>
-        <type>uimageBuffer</type>
-        <type>usampler2DMS</type>
-        <type>uimage2DMS</type>
-        <type>usampler2DMSArray</type>
-        <type>uimage2DMSArray</type>
-        <type>usamplerCubeArray</type>
-        <type>uimageCubeArray</type>
-        <type>atomic_uint</type>
+        <type>
+            <name>usampler1D</name>
+        </type>
+        <type>
+            <name>uimage1D</name>
+        </type>
+        <type>
+            <name>usampler2D</name>
+        </type>
+        <type>
+            <name>uimage2D</name>
+        </type>
+        <type>
+            <name>usampler3D</name>
+        </type>
+        <type>
+            <name>uimage3D</name>
+        </type>
+        <type>
+            <name>usamplerCube</name>
+        </type>
+        <type>
+            <name>uimageCube</name>
+        </type>
+        <type>
+            <name>usampler2DRect</name>
+        </type>
+        <type>
+            <name>uimage2DRect</name>
+        </type>
+        <type>
+            <name>usampler1DArray</name>
+        </type>
+        <type>
+            <name>uimage1DArray</name>
+        </type>
+        <type>
+            <name>usampler2DArray</name>
+        </type>
+        <type>
+            <name>uimage2DArray</name>
+        </type>
+        <type>
+            <name>usamplerBuffer</name>
+        </type>
+        <type>
+            <name>uimageBuffer</name>
+        </type>
+        <type>
+            <name>usampler2DMS</name>
+        </type>
+        <type>
+            <name>uimage2DMS</name>
+        </type>
+        <type>
+            <name>usampler2DMSArray</name>
+        </type>
+        <type>
+            <name>uimage2DMSArray</name>
+        </type>
+        <type>
+            <name>usamplerCubeArray</name>
+        </type>
+        <type>
+            <name>uimageCubeArray</name>
+        </type>
+        <type>
+            <name>atomic_uint</name>
+        </type>
     </unsigned-integer-opaque>
 </types>
